# simpleRT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
include/: aabb.hpp  box.hpp  bvh.hpp  camera.h  constantMedium.hpp  hitable.hpp  hitablelist.hpp  material.hpp  perlin.hpp  random_gen.h  ray.hpp  rect.h  sphere.h  texture.hpp  vec3.hpp
src/: main.cpp
